# DL_Tianchi_Medical_Search

./: .gitignore  README.md  flake.nix  pyproject.toml
medical_query_classification/: __init__.py  cli.py  data_augmentation.py  evaluate.py  fill_result.py  train.py  utils.py
