[project]
name = "medical-query-classification"
version = "0.0.1"
description = ""
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "numpy>=1.26.3",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "tyro>=0.9.2",
]

[project.scripts]
mqc = "medical_query_classification:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "Another-Infinity"
default = true
url = "https://mirrors.ustc.edu.cn/pypi/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

